--- a/css/templatemo-style.css
+++ b/css/templatemo-style.css
@@ -569,14 +569,19 @@ ul {
   -o-transition: all 0.2s linear;
   -webkit-transition: all 0.2s linear;
 }
+.more-info{
+  background-color: #fff;
+}
 
 .contact-content .more-info {
-  background-color: #fff;
+  color:#fff;
+  background-color: rgba(250, 250, 250, 0.03);
   padding: 30px;
   margin-top: 50px;
-  position: absolute;
+  position: relative;
   margin-left: -30px;
   margin-right: -100px;
+  text-align: center;
 }
 
 .footer {
